kyverno/add-pvc-annotation-reclaimjob.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-pvc-annotation-reclaimjob
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
    - name: add-pvc-annotation
      match:
        any:
        - resources:
            kinds:
            - PersistentVolumeClaim
      mutate:
        targets:
        - apiVersion: v1
          kind: PersistentVolumeClaim
        patchStrategicMerge:
          metadata:
            annotations:
              +(reclaimspace.csiaddons.openshift.io/schedule): "@hourly"
