kyverno/add-secret-cm.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: add-secret-to-pods
  annotations:
    policies.kyverno.io/title: Add Secret to Pods
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
spec:
  rules:
  - name: add-secret-cm-to-pods
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - frederik-coquelet
    mutate:

      patchStrategicMerge:
        spec:
          containers:
          - (name): "*"
            envFrom:
            - secretRef:
                name: aws-secret
            - configMapRef:
                name: metadata-grpc-configmap
