kyverno/namespace-knative-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-knative-namespace
spec:
  mutateExistingOnPolicyUpdate: true  
  rules:
    - name: mutate-knative-namespace
      match:
        any:
        resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              app.kubernetes.io/name: knative-serving
      mutate:
        targets:
          - apiVersion: v1
            kind: Namespace
        patchStrategicMerge:
          metadata:
            labels:
              cert-manager-tls: kubeflow-ingressgateway
            #  istio-injection: enabled
