kyverno/namespace-users-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-kubeflow-namespace
  annotations:
    policies.kyverno.io/title: Label Existing Namespaces
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Namespace
    kyverno.io/kyverno-version: 1.12.0
    policies.kyverno.io/minversion: 1.12.0
    kyverno.io/kubernetes-version: "1.28"
    policies.kyverno.io/description: >-
      Namespaces which preexist may need to be labeled after the fact and it is
      time consuming to identify which ones should be labeled and either doing so manually
      or with a scripted approach. This policy, which triggers on any AdmissionReview request
      to any Namespace, will result in applying the label `mykey=myvalue` to all existing
      Namespaces. If this policy is updated to change the desired label key or value, it will
      cause another mutation which updates all Namespaces.      
spec:
  mutateExistingOnPolicyUpdate: true
  rules:
  - name: mutate-kubeflow-namespace
    match:
      any:
      - resources:
          kinds:
          - Namespace
          selector:
            matchLabels:
              app.kubernetes.io/part-of: kubeflow-profile
    mutate:
      targets:
        - apiVersion: v1
          kind: Namespace
      patchStrategicMerge:
        metadata:
          labels:
            cert-manager-tls: aws-secret
