kyverno/set-druid-peon-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-druid-peon-resources
  annotations:
    policies.kyverno.io/title: Modify resources
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/category: Other
   
spec:
  generateExistingOnPolicyUpdate: true
  rules:
  - name: modify-cpu-request
    match:
      resources:
        kinds:
        - Pod
        namespaces:
        - druid-cluster
        names: 
        - indexparallel*
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - (name): "*"
            resources:
              requests:
                cpu: "10m"
