kyverno/set-image-pull-policy-IfNP.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: set-image-pull-policy-ifnotpresent
  annotations:
    policies.kyverno.io/title: Set Image Pull Policy to IfNotPresent
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy ensures that the image pull policy is set to IfNotPresent for all containers in all pods.
spec:
  rules:
  - name: set-image-pull-policy-ifnotpresent
    match:
      any:
      - resources:
          kinds:
          - Pod
    mutate:
      patchStrategicMerge:
        spec:
          containers:
          - (name): "*"
            imagePullPolicy: IfNotPresent
          initContainers:
          - (name): "*"
            imagePullPolicy: IfNotPresent
